# China-idnum

./: .gitignore  README.md  pyproject.toml
src/idnum/: __init__.py  idnum.py
src/idnum/data/: dc_20250328.csv
tests/: test_idnum.py  test_init.py
